test/files/neg/deprecate_package_object_extends.check
deprecate_package_object_extends.scala:3: error: package object inheritance is deprecated (https://github.com/scala/scala-dev/issues/441);
drop the `extends` clause or use a regular object instead
package object foo extends C
                   ^
deprecate_package_object_extends.scala:5: error: package object inheritance is deprecated (https://github.com/scala/scala-dev/issues/441);
drop the `extends` clause or use a regular object instead
package foo2 { object `package` extends C }
                                ^
2 errors
